# decimus_public

./: .dockerignore  .env.example  .gitignore  README.md  dev.sh
.github/workflows/: ci.yml
api/: Dockerfile  main.py  pyproject.toml  railway.toml  run_web.py
api/data/knowledge_base/rules/: xml_analysis.json
api/data/samples/: demo.mid
api/decimus/: __init__.py  analyzer.py  cli.py  engine.py  generator.py  harmonizer.py  instruments.py  knowledge.py  llm_client.py  orchestrator.py  output.py  planner.py  postprocess.py  primer.py  renderer.py  styles.py
api/decimus/web/: app.py
api/decimus/web/static/: index.html
api/fairseq/: gen_batch.py  gen_utils.py  make_data.py
api/preprocess/: preprocess_midi.py
api/scripts/: clean_berlioz.py  debug_orchestrate.py  finetune.py  generate_symphonynet_pairs.py  generate_training_data.py  rebuild_knowledge_base.py  validate_training_data.py
api/tests/: conftest.py  test_analyzer.py  test_engine.py  test_harmonizer.py  test_instruments.py  test_llm_client.py  test_orchestrator.py  test_output.py  test_planner.py  test_styles.py
deploy/: Dockerfile  config.yaml  runpod_handler.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  railway.toml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ActionsPanel.tsx  DAWViewer.tsx  DropZone.tsx  Header.tsx  LogPanel.tsx  RefinementChat.tsx  SettingsPanel.tsx  SoundFontPanel.tsx  StatusBar.tsx
frontend/lib/: api.ts  constants.ts  types.ts
