[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decimus"
version = "0.1.0"
description = "AI Orchestration Engine — transforms piano MIDI into full symphonic scores"
readme = "../README.md"
license = { file = "../LICENSE" }
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.1,<3.0",
    "numpy>=1.24,<2.0",
    "click>=8.1",
    "miditoolkit>=1.0.0",
    "chorder>=0.1.4",
    "more-itertools>=10.0",
    "tqdm>=4.66",
    "httpx>=0.27,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "music21>=9.1",
    "chromadb>=0.4.22,<0.6",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=7.4", "pytest-cov>=4.1"]
dev = ["ruff>=0.4", "mypy>=1.8"]

[project.scripts]
decimus = "decimus.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["decimus*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501", "E402", "F841"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F841"]
"scripts/*" = ["E402"]
"decimus/engine.py" = ["E402"]
"decimus/web/app.py" = ["E402"]
